<resources>
    <string name="app_name">Calculator</string>
    <string name="goal_label">Goal:</string> <!-- New string resource for "goal_label" -->
    <!-- Other string resources may be defined here -->
    <string name="enter_goal_hint">Enter your goal</string>
    <string name="enter_intake_hint">Enter intake</string>
    <string name="current_progress_label">Current Progress</string>
    <string name="summation_label">Summation: </string>
    <string name="progress_label">Progress: </string>
    <string name="daily_goal">Daily Goal</string>
    <string name="drink">+Drink</string>
    <string name="enter_each_water_intake">Enter Each Water Intake</string>
    <string name="L">L</string>
    <string name="mL">mL</string>
    <string name="Glasses">Glasses</string>
    <string name="add_intake">Add Intake</string>
    <string name="reset_intake">Reset Intake</string>

    <!-- ... Other string resources ... -->

    <!-- Array resource for spinner options -->
    <string-array name="unit_options">
        <item>@string/L</item>
        <item>@string/mL</item>
        <item>@string/Glasses</item>
    </string-array>

</resources>